test/spec_vectors/simd_load/ok/module_8.wat
(module (memory 1) (data (offset (i32.const 0)) "ÿÿÿÿÿÿÿÿÿÿÿÿÿÿÿÿ") (func (export "as-f32x4.abs-operand") (result v128) (f32x4.abs (v128.load (i32.const 0)))))