test/spec_vectors/simd_load/fail/module_21.wat
(module (memory 1) (func (drop (v128.load))))